; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/mediatek/extr_mtk-cmdq-helper.c_cmdq_pkt_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/mediatek/extr_mtk-cmdq-helper.c_cmdq_pkt_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmdq_pkt = type { i32 }

@CMDQ_ARG_A_WRITE_MASK = common dso_local global i32 0, align 4
@CMDQ_SUBSYS_SHIFT = common dso_local global i32 0, align 4
@CMDQ_CODE_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmdq_pkt_write(%struct.cmdq_pkt* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.cmdq_pkt*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.cmdq_pkt* %0, %struct.cmdq_pkt** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* @CMDQ_ARG_A_WRITE_MASK, align 4
  %12 = and i32 %10, %11
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @CMDQ_SUBSYS_SHIFT, align 4
  %15 = shl i32 %13, %14
  %16 = or i32 %12, %15
  store i32 %16, i32* %9, align 4
  %17 = load %struct.cmdq_pkt*, %struct.cmdq_pkt** %5, align 8
  %18 = load i32, i32* @CMDQ_CODE_WRITE, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @cmdq_pkt_append_command(%struct.cmdq_pkt* %17, i32 %18, i32 %19, i32 %20)
  ret i32 %21
}

declare dso_local i32 @cmdq_pkt_append_command(%struct.cmdq_pkt*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
